# keyword-extractor-api

./: Makefile  app.py  pyproject.toml
keyword_extractor_api/: __init__.py  config.py
keyword_extractor_api/application/rake/: views.py
tests/: __init__.py
tests/application/rake/: test_views.py
